--- a/src/views/layouts/main-layout.ejs
+++ b/src/views/layouts/main-layout.ejs
@@ -61,8 +61,13 @@
 
   <!-- Navbar Section -->
   <!-- make this separated from header to apply sticky effect -->
-  <nav class="bg-white shadow-md w-full h-14 flex justify-center items-center sticky top-0 z-10">
+  <nav class="bg-white w-full h-14 flex justify-center items-center sticky top-0 z-10">
     <style>
+      .dropdown:hover,
+      .dropdown.active {
+        scale: 125%;
+      }
+
       .dropdown:hover .dropdown-menu {
         display: block;
       }
@@ -70,8 +75,12 @@
       .dropdown-menu {
         display: none;
         position: absolute;
-        top: 88%;
+        top: 80%;
         width: max-content;
+      }
+
+      .dropdown-menu li:hover {
+        scale: 105%;
       }
     </style>
     <div class="container mx-auto px-4 py-2 flex justify-center items-center">
@@ -79,7 +88,8 @@
         <!-- Home Icon -->
         <li class="relative h-14 flex items-center">
           <a class="hover:text-blue-500 flex items-center" href="/">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-black hover:text-blue-500" fill="currentColor"
+            <svg xmlns="http://www.w3.org/2000/svg"
+              class="h-6 w-6 <%= activeCategory === 'home' ? 'text-blue-500' : 'text-black' %> fill-current transform transition-transform duration-300 hover:scale-125"
               viewBox="0 0 24 24" stroke="none">
               <path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z" />
               <path d="M9 22V12h6v10" />
@@ -89,89 +99,32 @@
         </li>
 
 
-        <!-- Original Navigation Items -->
-        <li class="relative dropdown h-14 flex items-center">
-          <a class="hover:text-blue-500 font-bold" href="#">Economics</a>
-          <ul class="absolute left-0 mt-2 w-48 bg-white shadow-lg dropdown-menu">
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">US</a></li>
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">Europe</a></li>
-          </ul>
-        </li>
-        <li class="relative dropdown h-14 flex items-center">
-          <a class="hover:text-blue-500 font-bold" href="#">Education</a>
-          <ul class="absolute left-0 mt-2 w-48 bg-white shadow-lg dropdown-menu">
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">Europe</a></li>
-          </ul>
-        </li>
-        <li class="relative dropdown h-14 flex items-center">
-          <a class="hover:text-blue-500 font-bold" href="#">Film</a>
-          <ul class="absolute left-0 mt-2 w-48 bg-white shadow-lg dropdown-menu">
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">Interview</a></li>
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">Review</a></li>
-          </ul>
-        </li>
-        <li class="relative dropdown h-14 flex items-center">
-          <a class="hover:text-blue-500 font-bold" href="#">Game</a>
-          <ul class="absolute left-0 mt-2 w-48 bg-white shadow-lg dropdown-menu">
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">Game console</a>
-            </li>
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">Game PC</a></li>
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">Game mobile</a></li>
-          </ul>
-        </li>
-        <li class="relative dropdown h-14 flex items-center">
-          <a class="hover:text-blue-500 font-bold" href="#">Law</a>
-          <ul class="absolute left-0 mt-2 w-48 bg-white shadow-lg dropdown-menu">
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">US</a></li>
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">Europe</a></li>
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">Asia</a></li>
-          </ul>
-        </li>
-        <li class="relative dropdown h-14 flex items-center">
-          <a class="hover:text-blue-500 font-bold" href="#">Music</a>
-          <ul class="absolute left-0 mt-2 w-48 bg-white shadow-lg dropdown-menu">
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">US</a></li>
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">UK</a></li>
-          </ul>
-        </li>
-        <li class="relative dropdown h-14 flex items-center">
-          <a class="hover:text-blue-500 font-bold" href="#">Politics</a>
-          <ul class="absolute left-0 mt-2 w-48 bg-white shadow-lg dropdown-menu">
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">Europe</a></li>
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">Asia</a></li>
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">US</a></li>
-          </ul>
-        </li>
-        <li class="relative dropdown h-14 flex items-center">
-          <a class="hover:text-blue-500 font-bold" href="#">Sport</a>
-          <ul class="absolute left-0 mt-2 w-48 bg-white shadow-lg dropdown-menu">
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">Football</a></li>
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">Tennis</a></li>
-          </ul>
-        </li>
-        <li class="relative dropdown h-14 flex items-center">
-          <a class="hover:text-blue-500 font-bold" href="#">Tech</a>
-          <ul class="absolute left-0 mt-2 w-48 bg-white shadow-lg dropdown-menu">
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">Phone Review</a>
-            </li>
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">Garget Review</a>
-            </li>
-          </ul>
-        </li>
-        <li class="relative dropdown h-14 flex items-center">
-          <a class="hover:text-blue-500 font-bold" href="#">Travel</a>
-          <ul class="absolute left-0 mt-2 w-48 bg-white shadow-lg dropdown-menu">
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">Europe</a></li>
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">Asia</a></li>
-            <li><a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="#">US</a></li>
-          </ul>
-        </li>
+        <!-- Dynamic Categories -->
+        <% categories.forEach(category=> { %>
+          <li class="relative dropdown h-14 flex items-center <%= activeCategory === category.name ? 'active' : '' %>">
+            <a class="<%= activeCategory === category.name ? 'text-blue-500' : '' %> hover:text-blue-500 font-bold"
+              href="/<%= category.name %>">
+              <%= category.displayName %>
+            </a>
+            <% if (category.subcategories && category.subcategories.length> 0) { %>
+              <ul class="absolute left-0 mt-2 w-48 bg-white shadow-lg dropdown-menu">
+                <% category.subcategories.forEach(sub=> { %>
+                  <li>
+                    <a class="block px-4 py-2 hover:bg-gray-200 hover:text-blue-500 font-bold" href="<%= sub.link %>">
+                      <%= sub.displayName %>
+                    </a>
+                  </li>
+                  <% }) %>
+              </ul>
+              <% } %>
+          </li>
+          <% }) %>
       </ul>
     </div>
   </nav>
 
-  <!-- Separator Line -->
-  <div class="border-t-2 border-gray-300"></div>
+
+
 
   <%- include(content) %>
 
